--- a/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/evaluate/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -61,11 +61,11 @@
 		</div>
 		<div>
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;订单号：</span>
-			<a>{{order_id}}</a>
+			<a href="/mall2/order/?order_id={{ order_id }}">{{order_num}}</a>
 		</div>
 		<div>
 			<span>会员名称：</span>
-			<a>{{member_name}}</a>
+			<a href="/member/detail/?id={{ member_id }}">{{member_name}}</a>
 		</div>
 		<div>
 			<span>会员等级：</span>
