--- a/weapp/apps/customerized_apps/sign/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/sign/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -7,6 +7,7 @@
 			<h3 class="modal-title" >查看结果</h3>
 		</div>
 		<div class="modal-body" style="min-height: 300px; overflow: auto;">
+				<div style="color:#FF0000;font-weight:bold">仅显示最近90天的签到信息</div>
 				<div
 								data-ui-role="advanced-table"
 								data-app="apps/sign"
@@ -15,7 +16,7 @@
 								data-template-id="#app-sign-viewDetails-tmpl"
 								data-enable-paginator="true"
 								data-enable-sort="false"
-								data-item-count-per-page="5"
+								data-item-count-per-page="15"
 								data-auto-load="false"
 								class="mt10 mb20"
 						></div>
@@ -47,7 +48,11 @@
                 ${item.prize}
             </td>
             <td>
-                ${item.prize}
+							{{if (item.status == 1)}}
+								<img width=16 src="/static_v2/img/sign_success.png"/>
+							{{else}}
+								<img width=16 src="/static_v2/img/sign_error.png"/>
+							{{/if}}
             </td>
         </tr>
         {{/each}}
