--- a/weapp/apps/customerized_apps/sign/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/sign/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -4,10 +4,10 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
-			<h3 class="modal-title" >查看结果</h3>
+			<h3 class="modal-title" >签到详情</h3>
 		</div>
 		<div class="modal-body" style="min-height: 300px; overflow: auto;">
-				<div style="color:#FF0000;font-weight:bold">仅显示最近90天的签到信息</div>
+				<div style="color:#FF0000;font-weight:bold">仅显示最近3个月的签到信息</div>
 				<div
 								data-ui-role="advanced-table"
 								data-app="apps/sign"
@@ -45,7 +45,7 @@
 							${item.created_at}
             </td>
             <td>
-                ${item.prize}
+                {{html item.prize}}
             </td>
             <td>
 							{{if (item.status == 1)}}
