修改微页面，弹窗，自营平台，新建商品 按钮 隐藏功能

--- a/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
@@ -11,7 +11,7 @@
 		
 		<div class="modal-body" style="padding-left:30px;padding-right:30px;">
 			<div class="mb10 clearfix xa-add-box {{if menuType == 'shengjingCustom'}}xui-hide{{/if}}">
-				<a href="/new_weixin/single_news/" target="_blank" class="btn btn-success xa-add-item w150"><span class="mr5 pr">+</span>创建单图文</a>
+				<a href="/new_weixin/single_news/" target="_blank" class="btn btn-success xa-add-item w150 fl"><span class="mr5 pr">+</span>创建单图文</a>
 				<div class="fr">
 					<input class="form-control xa-query xui-search-text" value=""><span class="xa-search xui-searchBtn cursor-pointer btn w80">搜索</span>
 				</div>
