--- a/weapp/apps/customerized_apps/scratch/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/scratch/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -1,5 +1,5 @@
-<script id="app-lottery-viewParticipanceDataDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
-	<div class="xui-app_lottery-Dialog modal fade">
+<script id="app-scratch-viewParticipanceDataDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
+	<div class="xui-app_scratch-Dialog modal fade">
 	<div class="modal-dialog modal-lg">
 	<div class="modal-content">
 		<div class="modal-header">
