--- a/weapp/static_v2/js/dialog/termite_select_qrcode_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/termite_select_qrcode_dialog/dialog.html
@@ -4,7 +4,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title">选择带参数二维码</h3>
+                    <h3 class="modal-title">选择活动推广码</h3>
                 </div>
 
                 <div class="modal-body" style="min-height: 300px; overflow: auto;">
