删除调试信息

--- a/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/mall_select_promotion_product_dialog/dialog.html
@@ -124,7 +124,7 @@
 				<th>商品名称</th>
 				<th width="120">商品价格（元）</th>
 				<th width="80">商品库存</th>
-				<th width="120">禁用状态7</th>
+				<th width="120">禁用状态</th>
 				<th width="120">操作</th>
 			</tr>
 		</thead>
