--- a/weapp/static_v2/js/dialog/channel_distribution_detail/dialog.html
+++ b/weapp/static_v2/js/dialog/channel_distribution_detail/dialog.html
@@ -41,10 +41,10 @@
                   {{if items.length}}
                   {{each(i, item) items}}
                 <tr>
-                <td style="width:80px">${item.name}</td>
-                <td>${item.cost}</td>
-                <td>${item.return_money}</td>
-                <td>${item.return_money}</td>
+				<td>${item.time_cycle_start}至${item.time_cycle_end}</td>
+                <td>${item.commission_rate}</td>
+                <td>${item.total_money}</td>
+                <td>${item.commission}</td>
                 </tr>
                 {{/each}}
 					{{else}}
