切换状态功能

--- a/weapp/static_v2/js/dialog/channel_distribution_log/dialog.html
+++ b/weapp/static_v2/js/dialog/channel_distribution_log/dialog.html
@@ -51,8 +51,8 @@
                   {{each(i, item) items}}
                 <tr>
                 <td style="width:80px">${item.name}</td>
-                <td>${item.cost}</td>
-                <td>${item.return_money}</td>
+                <td>${item.cost_money}</td>
+                <td>${item.commission}</td>
                 </tr>
                 {{/each}}
 					{{else}}
