--- a/weapp/static_v2/js/dialog/channel_distribution_log/dialog.html
+++ b/weapp/static_v2/js/dialog/channel_distribution_log/dialog.html
@@ -6,7 +6,7 @@
             <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
             <h3 class="modal-title">交易总额</h3>
     </div>
-        <div class="xui-log-head">交易总额:元</div>
+        <!--<div class="xui-log-head">交易总额:元</div> -->
 
                 <div class="modal-body" style="min-height: 200px; max-height: 500px; overflow: auto;">
 
